testsuite/tests/properties/invalid_prop_args/bad_type.lkt
import common

class BarNode: BarCode {
    fun base_prop(x: Symbol): Int = 12
}
